--- a/shop.html
+++ b/shop.html
@@ -3,13 +3,16 @@
 <head>
 	<meta charset="utf-8">
 	<title>HTML Academy: Барбершоп</title>
+	<link rel="stylesheet" href="normalize.css">
+	<link rel="stylesheet" href="css/style.css">
+	<link rel="stylesheet" href="fonts/fonts.css">
 </head>
 <body>
 	<header class="main-header">
 		<div class="container">
 			<nav class="main-navigation">
 			  <div class="catalog-logo">
-			    <a href="index.html"><img src="img/logo.png" width="111" height="24" alt="Барбершоп «Бородинский»"></a>
+			    <a href="index.html"><img src="img/logo-2.png" width="111" height="24" alt="Барбершоп «Бородинский»"></a>
 			  </div>
 				<ul>
 					<li>
@@ -46,15 +49,15 @@
 		</div>
 		<div class="gallery-items">
 			<figure class="top-photo">
-				<img src="img/top-photo.jpg" width="460" height="498" alt="«Baxter of California»">
+				<img src="img/top-img-shop.jpg" width="460" height="498" alt="«Baxter of California»">
 			</figure>
 			<figure class="bot-photo">
-				<img src="img/bot-photo1.jpg" width="140" height="149" alt="«Baxter of California»">
+				<img src="img/img-shop-1.jpg" width="140" height="149" alt="«Baxter of California»">
 			</figure>
 			<figure class="bot-photo">
-				<img src="img/bot-photo2.jpg" width="140" height="149" alt="«Baxter of California»">
+				<img src="img/img-shop-2.jpg" width="140" height="149" alt="«Baxter of California»">
 			</figure><figure class="bot-photo">
-			<img src="img/bot-photo3.jpg" width="140" height="149" alt="«Baxter of California»">
+			<img src="img/img-shop-3.jpg" width="140" height="149" alt="«Baxter of California»">
 		</figure>
 	</div>
 	<div class="product-description">
