--- a/catalog.html
+++ b/catalog.html
@@ -3,13 +3,16 @@
 <head>
 	<meta charset="utf-8">
 	<title>HTML Academy: Барбершоп</title>
+	<link rel="stylesheet" href="normalize.css">
+	<link rel="stylesheet" href="css/style.css">
+	<link rel="stylesheet" href="fonts/fonts.css">
 </head>
 <body>
 	<header class="main-header">
 		<div class="container">
 			<nav class="main-navigation">
 			  <div class="catalog-logo">
-			    <a href="index.html"><img src="img/logo.png" width="111" height="24" alt="Барбершоп «Бородинский»"></a>
+			    <a href="index.html"><img src="img/logo-2.png" width="111" height="24" alt="Барбершоп «Бородинский»"></a>
 			  </div>
 				<ul>
 					<li>
@@ -108,7 +111,7 @@
 		</aside>
 		<section class="catalog">
 			<article class="items">
-				<img src="img/items-1.jpg" alt="«Baxter of California»" width="220" height="165" >
+				<img src="img/item-1.jpg" alt="«Baxter of California»" width="220" height="165" >
 				<h2><a href="#">Набор для путешествий <span>«Baxter of California»</span></a></h2>
 				<div class="price">
 					<span>2900руб</span>
@@ -116,7 +119,7 @@
 				</div>
 			</article>
 			<article class="items">
-				<img src="img/items-2.jpg" alt="«Baxter of California»" width="220" height="165" >
+				<img src="img/item-2.jpg" alt="«Baxter of California»" width="220" height="165" >
 				<h2><a href="#">Увлажняющий кондиционер <span>«Baxter of California»</span></a></h2>
 				<div class="price">
 					<span>750руб</span>
@@ -124,7 +127,7 @@
 				</div>
 			</article>
 			<article class="items">
-				<img src="img/items-3.jpg" alt="«SUAVECITO»" width="220" height="165" >
+				<img src="img/item-3.jpg" alt="«SUAVECITO»" width="220" height="165" >
 				<h2><a href="#">Гель для волос <span>«SUAVECITO»</span></a></h2>
 				<div class="price">
 					<span>290руб</span>
@@ -132,7 +135,7 @@
 				</div>
 			</article>
 			<article class="items">
-				<img src="img/items-4.jpg" alt="«American crew»" width="220" height="165" >
+				<img src="img/item-4.jpg" alt="«American crew»" width="220" height="165" >
 				<h2><a href="#">Глина для укладки волос <span>«American crew»</span></a></h2>
 				<div class="price">
 					<span>500руб</span>
@@ -140,7 +143,7 @@
 				</div>
 			</article>
 			<article class="items">
-				<img src="img/items-5.jpg" alt="«American crew»" width="220" height="165" >
+				<img src="img/item-5.jpg" alt="«American crew»" width="220" height="165" >
 				<h2><a href="#">Гель для волос <span>«American crew»</span></a></h2>
 				<div class="price">
 					<span>300руб</span>
@@ -148,7 +151,7 @@
 				</div>
 			</article>
 			<article class="items">
-				<img src="img/items-6.jpg" alt="«Baxter of California»" width="220" height="165" >
+				<img src="img/item-6.jpg" alt="«Baxter of California»" width="220" height="165" >
 				<h2><a href="#">Набор для бритья<span>«Baxter of California»</span></a></h2>
 					<div class="price">
 						<span>3900руб</span>
