--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <head>
 	<meta charset="utf-8">
 	<title>HTML Academy: Барбершоп</title>
+	<link rel="stylesheet" href="normalize.css">
+	<link rel="stylesheet" href="css/style.css">
+	<link rel="stylesheet" href="fonts/fonts.css">
 </head>
 <body>
 		<header class="main-header">
@@ -68,7 +71,7 @@
 					<h2 class="index-content-title">Фотогалерея</h2>
 					<div class="gallery">
 						<figure class="gallery-content">
-							<img src="img/photo-1.jpg" width="286" height="164" alt="">
+							<img src="img/gallery.jpg" width="286" height="164" alt="">
 						</figure>
 						<button class="btn gallery-prev">Назад</button>
 						<button class="btn gallery-next">Вперёд</button>
